# RoleTect

./: .gitignore  README.md  index.html  package.json  vite.config.ts
.github/workflows/: publish.yaml
application/api/src/: main.rs
application/api/src/handlers/: cover_letters.rs  downloads.rs  mod.rs  pdf.rs
application/mobile/: README.md  pubspec.yaml
application/mobile/android/app/: build.gradle.kts
application/mobile/android/app/src/main/: AndroidManifest.xml
application/mobile/android/app/src/main/kotlin/com/example/cvsynth/: MainActivity.kt
application/mobile/android/app/src/main/kotlin/com/example/cvsynth_mobile/: MainActivity.kt
application/mobile/ios/Runner/: Info.plist
application/mobile/ios/Runner.xcodeproj/: project.pbxproj
application/mobile/lib/: main.dart
application/mobile/linux/: CMakeLists.txt
application/mobile/linux/runner/: my_application.cc
application/mobile/macos/Runner.xcodeproj/: project.pbxproj
application/mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
application/mobile/macos/Runner/Configs/: AppInfo.xcconfig
application/mobile/test/: widget_test.dart
application/mobile/web/: index.html  manifest.json
application/mobile/windows/: CMakeLists.txt
application/mobile/windows/runner/: Runner.rc  main.cpp
extentions/chrome/: background.js  content.js  manifest.json  popup.html  popup.js
extentions/firefox/: background.js  content.js  manifest.json  popup.html  popup.js
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  db.rs  lib.rs  main.rs  server.rs
src-tauri/src/commands/: cover_letters.rs  data.rs  inbox.rs  jobs.rs  mod.rs  pdf.rs  resumes.rs  settings.rs
src/components/: AboutTab.vue  CompilerTab.vue  CoverLettersTab.vue  CustomDialog.vue  CustomSelect.vue  DiagramTab.vue  FileTreeItem.vue  HomeTab.vue  InboxJobDetailView.vue  InboxTab.vue  JobDetailView.vue  JobParserView.vue  JobsTab.vue  ResumeDetailView.vue  ResumesTab.vue  SettingsTab.vue  SplashLoader.vue  Titlebar.vue
src/router/: index.ts
src/store/: dialog.ts  jobs.ts  resumes.ts  settings.ts
