[package]
name = "cvsynth"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cvsynth_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = "0.39.0"
rig = { version = "0.37.0", features = ["gemini-grpc"] }
tokio = "1.52.3"
tauri-plugin-stronghold = "2"
nanoid = "0.5.0"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
schemars = "1.2.1"
tectonic = { version = "0.16.9", features = ["external-harfbuzz"] }
tauri-plugin-shell = "2"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13.3", features = ["json"] }
scraper = "0.27.0"

[profile.dev.package.scrypt]
opt-level = 3

